# Archgen-Agentic-Architecture-Diagram-Generator

./: .gitignore  README.md  api.py  main.py  pyproject.toml
create_arch_agent/: agent.py  schemas.py
create_arch_agent/.adk/: session.db
create_arch_agent/scratch/: test_imagen.py  test_mermaid.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  ArchNode.jsx  index.css  main.jsx
