[project]
name = "architecture-diagram-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-adk>=1.33.0",
    "mermaid-py>=0.8.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
